--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -1,4 +1,5 @@
 <%= form_for(book) do |f| %>
+
   <div class="form-title row">
     <%= f.label :Title %>
     <%= f.text_field :title, class: "col-xs-12" %>
@@ -10,6 +11,6 @@
   </div>
 
   <div class="actions row">
-    <%= f.submit class: "btn btn-primary col-xs-12" %>
+    <%= f.submit "Create Book", class: "btn btn-primary col-xs-12" %>
   </div>
 <% end %>
