--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,13 +1,25 @@
 <div class="row">
   <div class="col-xs-offset-3 col-xs-6">
-    <h1>Editing Book</h1>
-      <%= render 'books/error', model: @book %>
-      <%= render 'books/book', book: @book %>
-    <div class="menu">
-      <%= link_to "Show", book_path(@book) %>
-      |
-      <%= link_to "Back", books_path %>
-    </div>
-    </div>
+    <h1>Editing book</h1>
+ <% if @book.errors.any? %>
+  <%= @book.errors.count %>errors prohibited this book from being saved:
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+ <% end %>
+ <%= form_with model: @book, url: book_path(@book.id), method: :patch do |f| %>
+
+   <h4>title</h4>
+   <%= f.text_field :title %>
+
+   <h4>body</h4>
+   <%= f.text_area :body %>
+   <%= f.submit 'Update Book' %>
+   <%= link_to "show", book_path(@book.id) %>
+   <%= link_to 'back', books_path %>
+ <% end %>
+
   <div class="col-xs-3"></div>
 </div>
