--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,27 +1,33 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-3">
-      <%= render 'users/user', user: @user %>
-      <h2>New book</h2>
+
+    <%= render 'users/user', user: @user %>
+    <h2>New book</h2>
       <%= render 'books/book', book: @book %>
     </div>
     <div class="col-xs-9">
-  	  <table class="table table-sm user-index">
-	  	  <h2>Users</h2>
+      <table class="table book-index">
+        <h2>Books</h2>
         <thead>
-          <th>image</th>
-          <th>name</th>
           <th></th>
-  	    </thead>
-  	  	<tbody>
-  	  	  <% @users.each do |user| %>
-	  	  	<tr>
-	  	  	  <td><%= attachment_image_tag user, :profile_image, :fill, 50, 50,fallback: "no_image.jpg"%></td>
-	  	  	  <td><%= user.name %></td>
-	  	  	  <td><%= link_to "Show", "/users/#{user.id}" %></td>
-	  	  	</tr>
-  	  	  <% end %>
-  	  	</tbody>
-  	  </table>
-  	</div>
+          <th>Title</th>
+          <th>Opinion</th>
+        </thead>
+        <tbody>
+          <% @books.each do |book| %>
+            <tr>
+              <td>
+                <%= link_to user_path(book.user) do %>
+                  <%= image_tag @user.get_profile_image(50,50), fallback: "no_image.jpg" %>
+                <% end %>
+              </td>
+              <td><%= link_to book.title, book_path(book.id) %></td>
+              <td><%= book.body %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
   </div>
+</div>
