--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,24 +10,77 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-    <header>
-      <% if user_signed_in? %>
-        <li>
-          <%= link_to '投稿フォーム', new_book_path %>
-        </li>
-        <li>
-          <%= link_to "logout", destroy_user_session_path, method: :delete %>
-        </li>
-      <% else %>
-        <li>
-          <%= link_to "新規登録", new_user_registration_path %>
-        </li>
-        <li>
-          <%= link_to "ログイン", new_user_session_path %>
-        </li>
-      <% end %>
+  <body class="header">
+    <header class="navbar navbar-fixed-top navbar-inverse">
+      <div class="container">
+        <nav class="nav navbar-left">
+          <a class="navbar-brand" href="">
+            <span>Bookers</span>
+          </a>
+        </nav>
+        <nav>
+          <ul class="nav navbar-nav navbar-right">
+            <% if user_signed_in? %>
+              <li>
+                <%= link_to user_path(current_user), class:"btn btn-link" do %>
+                <span class="glyphicon glyphicon-home" aria-hidden="true"> Home</span>
+                <% end %>
+              </li>
+
+              <li>
+                <%= link_to users_path, class:"btn btn-link" do %>
+                <span class="glyphicon glyphicon-user" aria-hidden="true"> Users</span>
+                <% end %>
+              </li>
+
+              <li>
+                <%= link_to books_path, class:"btn btn-link" do %>
+                <span class="glyphicon glyphicon-book" aria-hidden="true"> Books</span>
+                <% end %>
+              </li>
+              <li>
+                <%= link_to destroy_user_session_path, method: :delete, class:"btn btn-link" do %>
+                <span class="glyphicon glyphicon-log-out" aria-hidden="true"> Logout</span>
+                <% end %>
+              </li>
+            <% else %>
+              <li>
+                <%= link_to root_path, class:"btn btn-link" do %>
+                <span class="glyphicon glyphicon-home" aria-hidden="true"> Home</span>
+                <% end %>
+              </li>
+
+              <li>
+                <%= link_to about_path, class:"btn btn-link" do %>
+                <span class="glyphicon glyphicon-link" aria-hidden="true"> About</span>
+                <% end %>
+              </li>
+
+              <li>
+                <%= link_to new_user_registration_path, class:"btn btn-link" do %>
+                <span class="glyphicon glyphicon-edit" aria-hidden="true"> sign up</span>
+                <% end %>
+              </li>
+              <li>
+                <%= link_to new_user_session_path, class:"btn btn-link" do %>
+                <span class="glyphicon glyphicon-log-in" aria-hidden="true"> login</span>
+                <% end %>
+              </li>
+            <% end %>
+          </ul>
+        </nav>
+      </div>
     </header>
-    <%= yield %>
+    <div class="body">
+      <p class="notice"><%= notice %></p>
+
+      <%= yield %>
+
+
+        <footer>
+          <p>CopyRight Infratop.inc</p>
+        </footer>
+      </div>
+    </div>
   </body>
 </html>
