--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,7 +11,7 @@
         <% @books.each do |book| %>
           <tr>
             <td><%= link_to user_path(@user) do %>
-              <%= attachment_image_tag @user, :profile_image, :fill, 50, 50, fallback: "no_image.jpg"%>
+              <%= image_tag @user.get_profile_image(100,100), fallback: "no_image.jpg"%>
             <% end %></td>
               <td><%= link_to book.title, book_path(book.id) %></td>
               <td><%= book.body %></td>
