--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,12 +1,21 @@
 <div class="container">
   <div class="row">
-    <div class="col-xs-3">
+    <div class="col-xs-4">
 
     <%= render 'users/user', user: @user %>
+
+    <% if @book.errors.any? %>
+     <%= @book.errors.count %>errors prohibited this book from being saved:
+      <ul>
+       <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+       <% end %>
+    </ul>
+<% end %>
     <h2>New book</h2>
       <%= render 'books/book', book: @book %>
     </div>
-    <div class="col-xs-9">
+    <div class="col-xs-8">
       <table class="table book-index">
         <h2>Books</h2>
         <thead>
