--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,69 +8,79 @@
 
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <script src="https://kit.fontawesome.com/90f3528978.js" crossorigin="anonymous"></script>
   </head>
 
-  <body class="header">
-    <header class="navbar navbar-fixed-top navbar-inverse">
+  <body class="d-flex flex-column vh-100">
+    <header class="shadow-sm">
+      <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container">
         <nav class="nav navbar-left">
-          <a class="navbar-brand" href="">
+          <a class="navbar-brand" href="/">
             <span>Bookers</span>
           </a>
         </nav>
-        <nav>
-          <ul class="nav navbar-nav navbar-right">
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav ml-auto">
             <% if user_signed_in? %>
-              <li>
-                <%= link_to user_path(current_user), class:"btn btn-link" do %>
+              <li class="nav-item">
+                <%= link_to books_path(current_user), class:"btn btn-link" do %>
                 <span class="glyphicon glyphicon-home" aria-hidden="true"> Home</span>
                 <% end %>
               </li>
 
-              <li>
+              <li class="nav-item">
                 <%= link_to users_path, class:"btn btn-link" do %>
                 <span class="glyphicon glyphicon-user" aria-hidden="true"> Users</span>
                 <% end %>
               </li>
 
-              <li>
+              <li class="nav-item">
                 <%= link_to books_path, class:"btn btn-link" do %>
                 <span class="glyphicon glyphicon-book" aria-hidden="true"> Books</span>
                 <% end %>
               </li>
-              <li>
+              <li class="nav-item">
                 <%= link_to destroy_user_session_path, method: :delete, class:"btn btn-link" do %>
                 <span class="glyphicon glyphicon-log-out" aria-hidden="true"> Logout</span>
                 <% end %>
               </li>
             <% else %>
-              <li>
+              <li class="nav-item">
                 <%= link_to root_path, class:"btn btn-link" do %>
                 <span class="glyphicon glyphicon-home" aria-hidden="true"> Home</span>
                 <% end %>
               </li>
 
-              <li>
+              <li class="nav-item">
                 <%= link_to about_path, class:"btn btn-link" do %>
                 <span class="glyphicon glyphicon-link" aria-hidden="true"> About</span>
                 <% end %>
               </li>
 
-              <li>
+              <li class="nav-item">
                 <%= link_to new_user_registration_path, class:"btn btn-link" do %>
                 <span class="glyphicon glyphicon-edit" aria-hidden="true"> sign up</span>
                 <% end %>
               </li>
-              <li>
+              <li class="nav-item">
                 <%= link_to new_user_session_path, class:"btn btn-link" do %>
                 <span class="glyphicon glyphicon-log-in" aria-hidden="true"> login</span>
                 <% end %>
               </li>
             <% end %>
           </ul>
-        </nav>
-      </div>
+        </div>
+      </nav>
     </header>
+    
+    <main>
+      <div class="container px-5 px-sm-0">
+        <div class="row">
+          
+        </div>
+      </div>
+    </main>
     <div class="body">
       <p class="notice"><%= notice %></p>
 
@@ -78,7 +88,9 @@
 
 
         <footer>
-          <p>CopyRight Infratop.inc</p>
+          <div style="text-align:center;">
+           <p>CopyRight Infratop.inc</p>
+          </div>
         </footer>
       </div>
     </div>
