--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,3 +1,4 @@
+<div class="col-md-3">
 <table class="table table-user">
   <h2>User info</h2>
   <thead>
@@ -14,12 +15,11 @@
       <th>Introduction</th>
       <th><%= user.introduction %></th>
     </tr>
-    <tr>
-      <th colspan="2">
-        <%= link_to edit_user_path(current_user), class:"btn btn-default btn-block" do %>
-        <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
-      <% end %>
-      </th>
-    </tr>
   </tbody>
 </table>
+<div class="row">
+  <%= link_to edit_user_path(current_user), class:"btn btn-outline-secondary btn-block" do %>
+   <i class="fa fa-user-cog"></i>
+  <% end %>
+</div>
+</div>
