--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,9 +2,9 @@
 <%= form_with model: @User do |f| %>
   <label for="inputName">Name</label>
   <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
-  <label for="inputImage">ProfileImage</label>
+  <label for="inputImage">Image</label>
   <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
   <lavel for="inputIntro">Introduction</lavel>
   <%= f.text_area :introduction %>
-  <%= f.submit "変更を保存" %>
+  <%= f.submit "Update User" %>
 <% end %>
