--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,5 +1,5 @@
 <div style="text-align:center;">
-  <h1>Editing book</h1>
+  <h1>Editing Book</h1>
   <% if @book.errors.any? %>
    <%= @book.errors.count %>errors prohibited this book from being saved:
   <ul>
@@ -17,8 +17,8 @@
    <h4>body</h4>
    <%= f.text_area :body %>
    <%= f.submit 'Update Book' %>
-   <%= link_to "show", book_path(@book.id) %>
-   <%= link_to 'back', books_path %>
+   <%= link_to "Show", book_path(@book.id) %>
+   <%= link_to 'Back', books_path %>
  <% end %>
 
 </div>
