--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-xs-4">
+    <div class="col-md-4">
 
     <%= render 'users/user', user: @user %>
 
@@ -10,12 +10,12 @@
        <% @book.errors.full_messages.each do |message| %>
         <li><%= message %></li>
        <% end %>
-    </ul>
-<% end %>
+      </ul>
+    <% end %>
     <h2>New book</h2>
       <%= render 'books/book', book: @book %>
     </div>
-    <div class="col-xs-8">
+    <div class="col-md-8">
       <table class="table book-index">
         <h2>Books</h2>
         <thead>
