--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,18 +1,20 @@
 <div class="container">
   <div class="row">
 	<div class="col-md-6 col-md-offset-3">
-	  
+
 		<h1>Welcom to
 		  <span class="glyphicon glyphicon-book" aria-hidden="true"></span>
+		  <i class="fas fa-book"></i>
 		  <b>Bookers!!</b>
 		</h1>
 		<p>In
 		  <span class="glyphicon glyphicon-book" aria-hidden="true"></span>
+		  <i class="fas fa-book"></i>
 		  <b>Bookers</b>,<br>
 		  	you can share and exchange your opinions , inpresiions , and emotions<br>
 		  	about various books!
 		</p>
-	 
+
 	<div class="row">
       <%= link_to "Log in", new_user_session_path, class:"btn btn-primary col-xs-10 col-xs-offset-1" %>
 	</div>
