--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,11 @@
 <div class="container">
   <div class="row">
-    <div class="col-xs-3">
+    <div class="col-md-3">
       <%= render 'users/user', user: @user %>
       <h2>New book</h2>
       <%= render 'books/book', book: @book %>
     </div>
-    <div class="col-xs-9">
+    <div class="col-md-9">
       <h1>Book detail</h1>
       <table class="table table-user-show">
         <% @books.each do |book| %>
