--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
 
               <li class="nav-item">
                 <%= link_to books_path, class:"btn btn-link" do %>
-                <p><i class="fas fa-book"></i>
+                <p><i class="fas fa-book-open"></i>
                 <span class="glyphicon glyphicon-book" aria-hidden="true"> Books</span>
                 </p>
                 <% end %>
@@ -104,9 +104,13 @@
 
 
         <footer>
-          <div style="text-align:center;">
-           <p>CopyRight Infratop.inc</p>
-          </div>
+          <div class="container mt-5">
+            <div class="row">
+              <div class="mx-auto">
+                <p>CopyRight Infratop.inc</p>
+              </div>
+            </div>
+           </div>
         </footer>
       </div>
     </div>
