--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,6 +1,5 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-4">
 
     <%= render 'users/user', user: @user %>
 
@@ -12,10 +11,11 @@
        <% end %>
       </ul>
     <% end %>
-    <h2>New book</h2>
+
+    <h2 class="mt-3">New book</h2>
       <%= render 'books/book', book: @book %>
-    </div>
-    <div class="col-md-8">
+
+    <div class="col-md-8 offset-md-1">
       <table class="table book-index">
         <h2>Books</h2>
         <thead>
@@ -38,5 +38,4 @@
         </tbody>
       </table>
     </div>
-  </div>
 </div>
