--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,13 +1,13 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-4">
+
       <%= render 'users/user', user: @user %>
-      <h2>New book</h2>
+      <h2 class="mt-3">New book</h2>
       <%= render 'books/book', book: @newbook %>
-    </div>
-    <div class="col-md-8">
+
+    <div class="col-md-8 offset-md-1">
       <h1>Book detail</h1>
-      <table class="table table-user-show">
+      <table class="table">
         <tr>
           <td><%= image_tag @user.get_profile_image(30,30), fallback: "no_image.jpg" %></td>
           <td><%= link_to @user.name, user_path(@user) %></td>
