--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,4 +1,7 @@
+<div style="text-align:center;">
 <h1>Welcom to
   <span class="glyphicon glyphicon-book" aria-hidden="true"></span>
+  <i class="fas fa-book"></i>
   <b>Bookers!!</b>
 </h1>
+</div>
