--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -5,7 +5,7 @@
 		<h1>Welcom to
 		  <span class="glyphicon glyphicon-book" aria-hidden="true"></span>
 		  <i class="fas fa-book"></i>
-		  <b>Bookers!!</b>
+		  <b>Bookers!</b>
 		</h1>
 		<p>In
 		  <span class="glyphicon glyphicon-book" aria-hidden="true"></span>
