--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,16 +2,17 @@
   <div class="row">
     <div class="col-md-3">
       <%= render 'users/user', user: @user %>
-      <h2>New book</h2>
+      <h2 class="mt-3">New book</h2>
       <%= render 'books/book', book: @book %>
     </div>
-    <div class="col-md-9">
-  	  <table class="table table-sm user-index">
-	  	  <h2>Users</h2>
+    <div class="col-md-8 offset-md-1">
+
+	  	<h2>Users</h2>
+	  	<table class="table">
         <thead>
           <th>image</th>
           <th>name</th>
-          <th></th>
+          <th colspan="3"></th>
   	    </thead>
   	  	<tbody>
   	  	  <% @users.each do |user| %>
@@ -21,7 +22,8 @@
 	  	  	  <td><%= link_to "Show", "/users/#{user.id}" %></td>
 	  	  	</tr>
   	  	  <% end %>
-  	  	</tbody>
-  	  </table>
+  	  	 </tbody>
+  	   </table>
+  	 </div>
   	</div>
   </div>
