--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,13 +1,12 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-3">
       <%= render 'users/user', user: @user %>
-      <h2>New book</h2>
+      <h2 class="mt-3">New book</h2>
       <%= render 'books/book', book: @book %>
-    </div>
-    <div class="col-md-9">
+
+    <div class="col-md-8 offset-md-1">
       <h1>Book detail</h1>
-      <table class="table table-user-show">
+      <table class="table">
         <% @books.each do |book| %>
           <tr>
             <td><%= link_to user_path(@user) do %>
