--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,6 +1,6 @@
-<div class="container">
+<div class="container px-5 px-sm-0">
   <div class="row">
-
+  <div class="col-md-3">
     <%= render 'users/user', user: @user %>
 
     <% if @book.errors.any? %>
@@ -14,14 +14,16 @@
 
     <h2 class="mt-3">New book</h2>
       <%= render 'books/book', book: @book %>
+  </div>
 
     <div class="col-md-8 offset-md-1">
-      <table class="table book-index">
+      <table class="table table-hover table-inverse">
         <h2>Books</h2>
         <thead>
           <th></th>
           <th>Title</th>
           <th>Opinion</th>
+          <th colspan="3"></th>
         </thead>
         <tbody>
           <% @books.each do |book| %>
@@ -38,4 +40,5 @@
         </tbody>
       </table>
     </div>
+  </div>
 </div>
