--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,11 +1,12 @@
+
 <div class="container">
   <div class="row">
-	<div class="col-md-6 col-md-offset-3">
+	<div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">
 
 		<h1>Welcom to
 		  <span class="glyphicon glyphicon-book" aria-hidden="true"></span>
 		  <i class="fas fa-book"></i>
-		  <b>Bookers!</b>
+		  <b>Bookers!!</b>
 		</h1>
 		<p>In
 		  <span class="glyphicon glyphicon-book" aria-hidden="true"></span>
@@ -15,11 +16,16 @@
 		  	about various books!
 		</p>
 
+	<div class="btn-wrapper col-10 mx-auto">
+
 	<div class="row">
-      <%= link_to "Log in", new_user_session_path, class:"btn btn-primary col-xs-10 col-xs-offset-1" %>
+      <%= link_to "Log in", new_user_session_path, class:"btn btn-info btn-sm btn-block mb-3 sign_in" %>
 	</div>
 	<div class="row">
-	  <%= link_to "Sign up", new_user_registration_path, class:"btn btn-success col-xs-10 col-xs-offset-1" %>
+	  <%= link_to "Sign up", new_user_registration_path, class:"btn btn-success btn-sm btn-block sign_up" %>
+	</div>
+
 	</div>
   </div>
+</div>
 </div>
