--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,6 +4,7 @@
   　</p>
 <% end %>
 
+<div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
 <h2>User info</h2>
 
 <% if @user.errors.any? %>
@@ -16,11 +17,20 @@
 <% end %>
 
 <%= form_with model: @user do |f| %>
-  <label for="inputName">Name</label>
+<div class="form-group">
+  <label for="user_name">Name</label><br>
   <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
-  <label for="inputImage">Image</label>
+</div>
+<div class="form-group">
+  <label for="user_image">Image</label><br>
   <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
-  <lavel for="inputIntro">Introduction</lavel>
+</div>
+<div class="form-group">
+  <lavel for="user_introduction">Introduction</lavel><br>
   <%= f.text_area :introduction %>
+</div>
+<div class="form-group">
   <%= f.submit "Update User" %>
+</div>
 <% end %>
+</div>
