--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
   <body class="d-flex flex-column vh-100">
     <header class="shadow-sm">
-      <nav class="navbar navbar-expand-lg navbar-light">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
         <nav class="nav navbar-left">
           <a class="navbar-brand" href="/">
@@ -23,7 +23,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav ml-auto">
             <% if user_signed_in? %>
-              <li class="nav-item">
+              <li class="nav-link text-light">
                 <%= link_to user_path(current_user), class:"btn btn-link" do %>
                 <p><i class="fas fa-home"></i>
                 <span class="glyphicon glyphicon-home" aria-hidden="true"> Home</span>
@@ -31,7 +31,7 @@
                 <% end %>
               </li>
 
-              <li class="nav-item">
+              <li class="nav-link text-light">
                 <%= link_to users_path, class:"btn btn-link" do %>
                 <p><i class="fas fa-users"></i>
                 <span class="glyphicon glyphicon-user" aria-hidden="true"> Users</span>
@@ -39,14 +39,14 @@
                 <% end %>
               </li>
 
-              <li class="nav-item">
+              <li class="nav-link text-light">
                 <%= link_to books_path, class:"btn btn-link" do %>
                 <p><i class="fas fa-book-open"></i>
                 <span class="glyphicon glyphicon-book" aria-hidden="true"> Books</span>
                 </p>
                 <% end %>
               </li>
-              <li class="nav-item">
+              <li class="nav-link text-light">
                 <%= link_to destroy_user_session_path, method: :delete, class:"btn btn-link" do %>
                 <p><i class="fas fa-sign-out-alt"></i>
                 <span class="glyphicon glyphicon-log-out" aria-hidden="true"> Log out</span>
@@ -54,7 +54,7 @@
                 <% end %>
               </li>
             <% else %>
-              <li class="nav-item">
+              <li class="nav-link text-light">
                 <%= link_to root_path, class:"btn btn-link" do %>
                 <p><i class="fas fa-home"></i>
                 <span class="glyphicon glyphicon-home" aria-hidden="true"> Home</span>
@@ -62,7 +62,7 @@
                 <% end %>
               </li>
 
-              <li class="nav-item">
+              <li class="nav-link text-light">
                 <%= link_to about_path, class:"btn btn-link" do %>
                 <p><i class="fas fa-link"></i>
                 <span class="glyphicon glyphicon-link" aria-hidden="true"> About</span>
@@ -70,14 +70,14 @@
                 <% end %>
               </li>
 
-              <li class="nav-item">
+              <li class="nav-link text-light">
                 <%= link_to new_user_registration_path, class:"btn btn-link" do %>
                 <p><i class="fas fa-user-plus"></i>
                 <span class="glyphicon glyphicon-edit" aria-hidden="true"> Sign up</span>
                 </p>
                 <% end %>
               </li>
-              <li class="nav-item">
+              <li class="nav-link text-light">
                 <%= link_to new_user_session_path, class:"btn btn-link" do %>
                 <p><i class="fas fa-sign-in-alt"></i>
                 <span class="glyphicon glyphicon-log-in" aria-hidden="true"> Log in</span>
@@ -93,14 +93,14 @@
     <main>
       <div class="container px-5 px-sm-0">
         <div class="row">
-
+　　　　　<%= yield %>
         </div>
       </div>
     </main>
     <div class="body">
       <p class="notice"><%= notice %></p>
 
-      <%= yield %>
+
 
 
         <footer>
