--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,10 @@
 <div class="container">
   <div class="row">
+    <div class="col-md-3">
       <%= render 'users/user', user: @user %>
       <h2 class="mt-3">New book</h2>
       <%= render 'books/book', book: @book %>
+    </div>
 
     <div class="col-md-8 offset-md-1">
       <h1>Book detail</h1>
@@ -10,7 +12,7 @@
         <% @books.each do |book| %>
           <tr>
             <td><%= link_to user_path(@user) do %>
-              <%= image_tag @user.get_profile_image(100,100), fallback: "no_image.jpg"%>
+              <%= image_tag @user.get_profile_image(50,50), fallback: "no_image.jpg"%>
             <% end %></td>
               <td><%= link_to book.title, book_path(book.id) %></td>
               <td><%= book.body %></td>
